docs(kb): add allocation profiling